package Interface;

public interface activeAble {
    boolean active = false;
    void Active();
}
