package Interface;

public interface taskAble {
    void taskAlert();
}
