package item;

import javafx.scene.image.ImageView;

public class Object extends ImageView {
    public Object(String name){
        super(name);
    }
}
